@@ -62,6 +62,9 @@ button {
             width: 30px;
         }
         & > thead > tr > th {
+            & > label.sortable {
+                cursor: pointer;
+            }
             overflow: hidden;
             text-overflow: ellipsis;
             min-width: 30px;
